unpackaged/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <description>Vehicles associated to a customer.  Member or non-member</description>
    <label>Vehicle</label>
    <nameField>
        <displayFormat>V-{0}</displayFormat>
        <label>Vehicle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>