unpackaged/main/default/objects/Vehicle__c/fields/Fleet_Number__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Number__c</fullName>
    <label>Fleet Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>