unpackaged/main/default/objects/Vehicle__c/fields/Fleet_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Unit_Number__c</fullName>
    <label>Fleet Unit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>