unpackaged/main/default/objects/Vehicle__c/fields/Item_1__c.field-meta.xml
<CustomField>
    <fullName>Item_1__c</fullName>
    <label>Item 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>