unpackaged/main/default/objects/Vehicle__c/fields/Item_2__c.field-meta.xml
<CustomField>
    <fullName>Item_2__c</fullName>
    <label>Item 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>