unpackaged/main/default/objects/Vehicle__c/fields/Item_3__c.field-meta.xml
<CustomField>
    <fullName>Item_3__c</fullName>
    <label>Item 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>