unpackaged/main/default/objects/Vehicle__c/fields/Last_Visited_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visited_Date__c</fullName>
    <label>Last Visited Date</label>
    <summarizedField>Car_Care_Visit__c.RO_Date__c</summarizedField>
    <summaryForeignKey>Car_Care_Visit__c.Vehicle__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>