unpackaged/main/default/objects/Vehicle__c/fields/LoyaltyID__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyID__c</fullName>
    <formula>Contact__r.ACG_LoyaltyID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LoyaltyID</label>
    <type>Text</type>
</CustomField>