unpackaged/main/default/objects/Vehicle__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>