unpackaged/main/default/objects/Vehicle__c/fields/Number_of_Car_Care_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Car_Care_Visits__c</fullName>
    <description>Total number of Car Care Visits per vehicle</description>
    <label>Number of Car Care Visits</label>
    <summaryForeignKey>Car_Care_Visit__c.Vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>