unpackaged/main/default/objects/Vehicle__c/fields/UniqueID__c.field-meta.xml
<CustomField>
    <fullName>UniqueID__c</fullName>
    <label>UniqueID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>