unpackaged/main/default/objects/Vehicle__c/fields/Vin_Number__c.field-meta.xml
<CustomField>
    <fullName>Vin_Number__c</fullName>
    <label>Vin Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>