unpackaged/main/default/objects/Vehicle__c/fields/WashID__c.field-meta.xml
<CustomField>
    <fullName>WashID__c</fullName>
    <formula>Contact__r.ACG_WashID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WashID</label>
    <type>Text</type>
</CustomField>